# kolumnextractor

./: .travis.yml  Pipfile  README.md  config_parameters.py  data_holder.py  kolumnextractor.py  main.py  pyproject.toml  requirements.txt  test.csv  test_kolumnextractor.py  test_main.py  transformers.py  validation.py
.github/workflows/: python-publish.yml
data/: test.csv
src/: config_parameters.py  data_container.py  data_holder.py  kolumnextractor.py  test_kolumnextractor.py  test_transformers.py  test_validator.py  transformers.py  validation.py
src/kolumnextractor/: __init__.py  data_holder.py  kolumnextractor.py  validation.py
