[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "kolumnextractor"
version = "0.0.1"
authors = [
  { name="J Taylo", email="author@example.com" },
]
description = "Extracts column names from CSV files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jTaylo99/kolumnextractor"
"Bug Tracker" = "https://github.com/jTaylo99/kolumnextractor/issues"